# stated-scope-guard

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: dismissable.rs  dismissible.rs  lib.rs
